--- a/cover.html
+++ b/cover.html
@@ -50,7 +50,7 @@
         <tr>
          <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/synopex2025/overview.html
 " target="_blank" href="https://goodlight1234.github.io/synopex2025/overview.html
-"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="시노펙스 40주년 비전 발표" data-bit="iit" src="https://github.com/goodlight1234/synopex2025/blob/main/images/Frame%205520.png?raw=true"></span></a></p></td>
+"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="시노펙스 40주년 비전 발표" data-bit="iit" src="https://raw.githubusercontent.com/goodlight1234/synopex2025/refs/heads/main/images/overview.png"></span></a></p></td>
          <td style="vertical-align: top; padding-left: 7.5px;">
           <div class="se-div" style="font-family: &quot;Noto Sans KR&quot;, sans-serif; line-height: 1.7;">
            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/synopex2025/overview.html
@@ -81,7 +81,7 @@
        </colgroup>
        <tbody>
         <tr>
-         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/synopex2025/tech.html" target="_blank" href="https://goodlight1234.github.io/synopex2025/tech.html"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="SYNONEWS" data-bit="iit" src="https://github.com/goodlight1234/synopex2025/blob/main/images/ChatGPT%20Image%202025%EB%85%84%2011%EC%9B%94%2012%EC%9D%BC%20%EC%98%A4%ED%9B%84%2002_28_18.png?raw=true"> </span></a></p></td>
+         <td style="vertical-align: top; padding-right: 7.5px;"><p style="line-height: 1.5; padding: 0px; margin: 0px;"><a data-href="https://goodlight1234.github.io/synopex2025/tech.html" target="_blank" href="https://goodlight1234.github.io/synopex2025/tech.html"><span class="se-drawing-object-wrapper se-image CToWUd" style="vertical-align: baseline; text-indent: 0px; width: calc(100% + 0px); display: block;"><img style="max-width: 100%; height: auto; vertical-align: bottom; width: calc(100% + 0px);" alt="SYNONEWS" data-bit="iit" src="https://raw.githubusercontent.com/goodlight1234/synopex2025/refs/heads/main/images/tech.png"> </span></a></p></td>
          <td style="vertical-align: top; padding-left: 7.5px;">
           <div class="se-div" style="font-family: &quot;Noto Sans KR&quot;, sans-serif; line-height: 1.7;">
            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/synopex2025/tech.html"   rel="noopener" target="_blank" href="https://goodlight1234.github.io/synopex2025/tech.html"><span style="font-weight: bold; font-size: 20px;">기술이 성과가 되다</span></a></p>
