--- a/interview.html
+++ b/interview.html
@@ -611,7 +611,7 @@
         <nav class="max-w-6xl mx-auto flex items-center justify-between p-3 md:p-4 rounded-xl nav-blur card">
             <div class="flex items-center gap-3 md:gap-4">
                 <div class="w-10 h-10 rounded-lg flex items-center justify-center flex-shrink-0">
-                    <img src="https://via.placeholder.com/40x40?text=SINO" alt="Synopex CI">
+                    <img src="images\synopex_ci_e (2) 2.png" alt="Synopex CI">
                 </div>
 
                 <div class="hidden sm:block">
@@ -675,8 +675,8 @@
                         <img src="https://via.placeholder.com/150x150?text=R%26D+Chief" alt="R&D 인터뷰"
                             class="rounded-full w-24 h-24 flex-shrink-0 object-cover border-4 border-blue-100">
                         <div>
-                            <span class="text-lg font-bold text-blue-700 block">이민호 본부장</span>
-                            <span class="text-sm text-gray-500">연구개발본부</span>
+                            <span class="text-lg font-bold text-blue-700 block">석유민 센터장님</span>
+                            <span class="text-sm text-gray-500">R&D센터</span>
                         </div>
                     </div>
                     <blockquote class="mt-6 text-lg text-gray-700 border-l-4 border-blue-300 pl-4 italic">
@@ -712,8 +712,8 @@
                         <img src="https://via.placeholder.com/150x150?text=Global+Manager" alt="글로벌 인터뷰"
                             class="rounded-full w-24 h-24 border-4 border-green-100">
                         <div>
-                            <span class="text-lg font-bold text-green-700 block">김지영 매니저</span>
-                            <span class="text-sm text-gray-500">글로벌 마케팅팀</span>
+                            <span class="text-lg font-bold text-green-700 block">미정</span>
+                            <span class="text-sm text-gray-500">인송신장 사업본부 영업팀</span>
                         </div>
                     </div>
                     <blockquote class="mt-6 text-lg text-gray-700 border-l-4 border-green-300 pl-4 italic">
@@ -749,8 +749,8 @@
                         <img src="https://via.placeholder.com/150x150?text=Production+Leader" alt="생산 인터뷰"
                             class="rounded-full w-24 h-24 border-4 border-red-100">
                         <div>
-                            <span class="text-lg font-bold text-red-700 block">박현우 팀장</span>
-                            <span class="text-sm text-gray-500">생산 품질관리팀</span>
+                            <span class="text-lg font-bold text-red-700 block">미정</span>
+                            <span class="text-sm text-gray-500">베트남 사업장팀</span>
                         </div>
                     </div>
                     <blockquote class="mt-6 text-lg text-gray-700 border-l-4 border-red-300 pl-4 italic">
@@ -787,8 +787,8 @@
                             <img src="https://via.placeholder.com/150x150?text=HR+Lead" alt="HR 인터뷰"
                                 class="rounded-full w-20 h-20 border-4 border-yellow-100">
                             <div>
-                                <span class="text-lg font-bold text-yellow-700 block">최미정 이사</span>
-                                <span class="text-sm text-gray-500">경영 관리팀</span>
+                                <span class="text-lg font-bold text-yellow-700 block">정민재</span>
+                                <span class="text-sm text-gray-500">경영지원본부장</span>
                             </div>
                         </div>
                         <p class="mt-4 text-gray-600">
@@ -806,13 +806,12 @@
                             <img src="https://via.placeholder.com/150x150?text=CEO" alt="CEO 인터뷰"
                                 class="rounded-full w-20 h-20 border-4 border-indigo-100">
                             <div>
-                                <span class="text-lg font-bold text-indigo-700 block">홍길동 대표이사</span>
+                                <span class="text-lg font-bold text-indigo-700 block">손경익</span>
                                 <span class="text-sm text-gray-500">CEO</span>
                             </div>
                         </div>
                         <p class="mt-4 text-gray-600">
-                            “2026년은 글로벌 Top 3 멤브레인 솔루션 기업으로 도약하는 해로 만들겠습니다.
-                            기술 혁신과 ESG 경영을 양축으로 지속 가능한 성장을 이어가겠습니다.”
+                            “임직원들이 좋아할만한 이야기들~”
                         </p>
                         <div class="mt-4 flex flex-wrap gap-3 text-sm text-indigo-700 font-medium">
                             <span class="pill bg-indigo-100">#글로벌Top3</span>
@@ -822,7 +821,14 @@
                 </div>
             </div>
         </section>
-
+    <section class="mb-24 p-6 rounded-2xl bg-[linear-gradient(180deg,#f7fbff,transparent)] card-border text-center" data-aos="fade-up">
+      <h3 class="text-2xl font-semibold text-[var(--brand)]">외부 전문가들은 시노펙스를 어떻게 평가했을까요?</h3>
+      <p class="text-sm text-gray-600 mt-3">내부의 목소리에 이어, 외부 전문가들의 의견도 확인해보세요.</p>
+      <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
+        <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="px-4 py-2 rounded-md border border-[var(--brand)] text-[var(--brand)]">시노펙스 2025 기술 성과 보기</a>
+        <a href="https://goodlight1234.github.io/synopex2025/interview.html" class="px-4 py-2 rounded-md bg-[var(--brand)] text-white">전문가들이 바라보는 시노펙스</a>
+      </div>
+    </section>
     </main>
 
     <button id="scrollTopBtn" title="맨 위로">▲</button>
