--- a/tech.html
+++ b/tech.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- 모바일 반응형 뷰포트 (고정 width 제거) -->
- <meta name="viewport" content="width=900">
+ <meta name="viewport" content="width=900, user-scalable=no">
   <title>2025 SYNOPEX NEWSLETTER</title>
 
   <!-- Tailwind CDN -->
