--- a/tech.html
+++ b/tech.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- 모바일 반응형 뷰포트 (고정 width 제거) -->
- <meta name="viewport" content="width=900, user-scalable=no">
+ <meta name="viewport" content="width=900">
   <title>2025 SYNOPEX NEWSLETTER</title>
 
   <!-- Tailwind CDN -->
@@ -238,21 +238,27 @@
  <div id="menuOverlay" class="fixed inset-0 bg-black/40 backdrop-blur-sm opacity-0 pointer-events-none transition-opacity duration-500 z-40"></div>
 
 <div id="mobileMenu"
-  class="fixed top-0 right-0 w-3/4 max-w-sm h-full bg-white/70 backdrop-blur-lg shadow-xl z-50 transform translate-x-full transition-transform duration-500 ease-in-out">
-  <div class="p-6 space-y-6 text-lg font-medium text-slate-800">
+  class="fixed top-0 right-0 w-3/4 max-w-sm h-full bg-white/60 backdrop-blur-xl shadow-2xl z-50 transform translate-x-full transition-transform duration-400 ease-in-out">
+
+  <!-- 상단 닫기(X) - 왼쪽으로 이동, '메뉴' 텍스트 제거 -->
+  <div class="flex items-center px-6 py-5 border-b border-slate-200">
+    <button id="closeMenu" class="text-slate-500 hover:text-slate-700 text-3xl leading-none">
+      &times;
+    </button>
+  </div>
+
+  <!-- 메뉴 리스트 -->
+  <div class="p-6 space-y-5 text-lg font-medium text-slate-800">
     <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
     <a href="" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
     <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
     <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
     <a href="#awards" class="block hover:text-blue-600">5) 2026 계획</a>
     <a href="https://goodlight1234.github.io/report/" class="block hover:text-blue-600">6) 뉴스 아카이브</a>
-
-    <button id="closeMenu"
-      class="mt-8 w-full px-5 py-2 bg-blue-600 text-white rounded-lg shadow-md hover:bg-blue-700 transition">
-      닫기
-    </button>
   </div>
 </div>
+
+
  <header class="fixed w-full z-40 top-4 left-0 px-4">
   <nav class="max-w-6xl mx-auto flex items-center justify-between p-2 sm:p-3 rounded-xl nav-blur card">
     <div class="flex items-center gap-3">
