--- a/interview.html
+++ b/interview.html
@@ -603,8 +603,8 @@
   <!-- 메뉴 리스트 -->
   <div class="p-6 space-y-5 text-lg font-medium text-slate-800">
     <a href="https://goodlight1234.github.io/synopex2025/overview.html" class="block hover:text-blue-600">1) 시노펙스 2025 한눈에 보기</a>
-    <a href="" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
-    <a href="#validation" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
+    <a href="https://goodlight1234.github.io/synopex2025/tech.html" class="block hover:text-blue-600">2) 기술 & 마케팅 활동</a>
+    <a href="https://goodlight1234.github.io/synopex2025/interview.html" class="block hover:text-blue-600">3) 임직원 인터뷰</a>
     <a href="#business" class="block hover:text-blue-600">4) 인사이트펙스</a>
     <a href="#awards" class="block hover:text-blue-600">5) 2026 계획</a>
     <a href="https://goodlight1234.github.io/report/" class="block hover:text-blue-600">6) 뉴스 아카이브</a>
