--- a/interview.html
+++ b/interview.html
@@ -669,39 +669,63 @@
         </section>
 
         <section id="tech" class="section">
-            <div class="max-w-6xl mx-auto px-4">
-                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2" data-aos="fade-up">
-                    1. 석유민 센터장님-EPTFE 소재 국산화
-                </h2>
-                <div class="sinofex-hr mb-8" data-aos="fade-up" data-aos-delay="100"></div>
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2" data-aos="fade-up">
+      1. 석유민 센터장님 – ePTFE 소재 국산화 성공 스토리
+    </h2>
 
-                <div class="card p-6 md:p-10 mb-12 shadow-lg bg-blue-50/40" data-aos="fade-up" data-aos-delay="200">
-                    <div class="flex flex-col md:flex-row items-start md:items-center gap-6">
-                        <img src="https://via.placeholder.com/150x150?text=R%26D+Chief" alt="R&D 인터뷰"
-                            class="rounded-full w-24 h-24 flex-shrink-0 object-cover border-4 border-blue-100">
-                        <div>
-                            <span class="text-lg font-bold text-blue-700 block">석유민 센터장님</span>
-                            <span class="text-sm text-gray-500">R&D센터</span>
-                        </div>
-                    </div>
-                    <blockquote class="mt-6 text-lg text-gray-700 border-l-4 border-blue-300 pl-4 italic">
-                        “초박막 멤브레인 기술은 올해 수소 연료전지 효율을 <span class="card-value" data-count="20">0</span>% 이상 개선하며
-                        새로운 경쟁력을 확보했습니다. 수많은 시행착오 끝에 얻은 귀중한 결과입니다.”
-                    </blockquote>
-                    <div class="mt-4 flex flex-wrap gap-3 text-sm text-blue-600 font-medium">
-                        <span class="pill bg-blue-100">#수소멤브레인</span>
-                        <span class="pill bg-blue-100">#효율<span class="card-value" data-count="20">0</span>%개선</span>
-                        <span class="pill bg-blue-100">#국제특허6건</span>
-                    </div>
-                </div>
+    <div class="sinofex-hr mb-8" data-aos="fade-up" data-aos-delay="100"></div>
 
-                <p class="text-gray-600" data-aos="fade-up" data-aos-delay="300">
-                    <strong>Q.</strong> 앞으로의 기술 로드맵은?<br>
-                    <strong>A.</strong> 혈액투석용 멤브레인 상용화에 주력하고 있습니다.
-                    의료 분야 진출을 통해 기술의 사회적 가치까지 확장할 계획입니다.
-                </p>
-            </div>
-        </section>
+    <div class="card p-6 md:p-10 mb-12 shadow-lg bg-blue-50/40" data-aos="fade-up" data-aos-delay="200">
+      <div class="flex flex-col md:flex-row items-start md:items-center gap-6">
+        <img src="images\image 567.png"
+             alt="R&D 인터뷰"
+             class="rounded-full w-24 h-24 flex-shrink-0 object-cover border-4 border-blue-100">
+
+        <div>
+          <span class="text-lg font-bold text-blue-700 block">석유민 센터장님</span>
+          <span class="text-sm text-gray-500">R&D센터장 / ePTFE 국산화 책임자</span>
+        </div>
+      </div>
+
+      <blockquote class="mt-6 text-lg text-gray-700 border-l-4 border-blue-300 pl-4 italic">
+        “Gore가 40년 넘게 사실상 독점하던 ePTFE 시장에 국산 기술로 도전한다는 건
+        ‘불가능에 가까운 프로젝트’라는 평가도 많았습니다.  
+        하지만 미세공정 제어·나노기공 균일화 기술을 끝까지 고도화해
+        결국 <span class="font-bold">완전한 국산 ePTFE 멤브레인 양산에 성공</span>했습니다.
+        이제 한국도 글로벌 필터 시장에서 기술로 승부할 수 있습니다.”
+      </blockquote>
+
+      <div class="mt-4 flex flex-wrap gap-3 text-sm text-blue-600 font-medium">
+        <span class="pill bg-blue-100">#ePTFE국산화</span>
+        <span class="pill bg-blue-100">#Gore독점깨기</span>
+        <span class="pill bg-blue-100">#나노기공제어기술</span>
+        <span class="pill bg-blue-100">#반도체CMP필터</span>
+        <span class="pill bg-blue-100">#바이오&디스플레이확장</span>
+      </div>
+    </div>
+
+    <p class="text-gray-600" data-aos="fade-up" data-aos-delay="300">
+      <strong>Q.</strong> ePTFE 국산화의 핵심은 무엇인가요?<br>
+      <strong>A.</strong> 첫째는 ‘균일한 나노기공 제어’이고, 둘째는 ‘확대 생산성’입니다.
+      단순히 만드는 것이 아니라, 반도체·바이오·환경 분야가 요구하는
+      <strong>멤브레인의 두께 균일도, 내화학성, 공극률을 모두 만족</strong>해야 했습니다.
+      이를 위해 소재 연구, 공정 자동화, 신뢰성 테스트를 동시에 진행했습니다.
+    </p>
+
+    <p class="text-gray-600 mt-4" data-aos="fade-up" data-aos-delay="350">
+      <strong>Q.</strong> 그다음 확장 로드맵은 어떻게 되나요?<br>
+      <strong>A.</strong> CMP 슬러리 필터의 양산 검증을 진행 중이며,
+      향후에는 <strong>반도체 제조라인용 고내식 필터</strong>,
+      <strong>바이오 멤브레인</strong>,
+      <strong>수소연료전지용 멤브레인</strong>까지 적용 범위를 넓힐 계획입니다.
+      국산화의 가치는 ‘단일 성공’이 아니라,
+      산업 전반으로 확장 가능한 기술 플랫폼을 확보한 데 있습니다.
+    </p>
+
+  </div>
+</section>
+
 
         <hr class="my-10 border-gray-100 max-w-6xl mx-auto">
 
@@ -718,7 +742,7 @@
                             class="rounded-full w-24 h-24 border-4 border-green-100">
                         <div>
                             <span class="text-lg font-bold text-green-700 block">미정</span>
-                            <span class="text-sm text-gray-500">인송신장 사업본부 영업팀</span>
+                            <span class="text-sm text-gray-500">인공신장 사업본부 영업팀</span>
                         </div>
                     </div>
                     <blockquote class="mt-6 text-lg text-gray-700 border-l-4 border-green-300 pl-4 italic">
