--- a/tech.html
+++ b/tech.html
@@ -335,7 +335,7 @@
           <div class="flex flex-col md:flex-row gap-4 items-stretch">
             <div class="flex-1 bg-white p-4 rounded-lg card-border shadow-sm border-l-4 border-[var(--brand)]" data-aos="fade-right" data-aos-delay="50">
               <h3 class="text-lg font-semibold text-[var(--brand)]">기술성과</h3>
-              <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
+              <ul class="mt-2 text-base text-gray-700 list-disc list-inside">
                 <li>혈액여과기 CE MDR 인증 신청 완료</li>
                 <li>혈액여과기 임상 성공 및 SCI 논문 게재</li>
               </ul>
@@ -347,7 +347,7 @@
 
             <div class="flex-1 bg-white p-4 rounded-lg card-border shadow-sm border-l-4 border-emerald-400" data-aos="fade-left" data-aos-delay="100">
               <h3 class="text-lg font-semibold text-emerald-600">실질 사업 효과</h3>
-              <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
+              <ul class="mt-2 text-base text-gray-700 list-disc list-inside">
                 <li>비브라운 코리아 공급계약 체결</li>
                 <li>모로코 PRIMEDIC사와 3년간 218만달러 수출 MOU</li>
               </ul>
@@ -358,7 +358,7 @@
           <div class="flex flex-col md:flex-row gap-4 items-stretch">
             <div class="flex-1 bg-white p-4 rounded-lg card-border shadow-sm border-l-4 border-[var(--brand)]" data-aos="zoom-in" data-aos-delay="120">
               <h3 class="text-lg font-semibold text-[var(--brand)]">기술성과</h3>
-              <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
+              <ul class="mt-2 text-base text-gray-700 list-disc list-inside">
                 <li>랩온어칩 혈구분석 카트리지 특허 출원</li>
                 <li>이동형 정수기 식약처 허가 신청</li>
               </ul>
@@ -370,7 +370,7 @@
 
             <div class="flex-1 bg-white p-4 rounded-lg card-border shadow-sm border-l-4 border-gray-500" data-aos="zoom-in" data-aos-delay="160">
               <h3 class="text-lg font-semibold text-gray-700">기술 증명</h3>
-              <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
+              <ul class="mt-2 text-base text-gray-700 list-disc list-inside">
                 <li>KSN 2025, JSHHD 2025 등 학회에서 기술 검증</li>
               </ul>
             </div>
@@ -380,7 +380,7 @@
           <div class="flex flex-col md:flex-row gap-4 items-stretch">
             <div class="flex-1 bg-white p-4 rounded-lg card-border shadow-sm border-l-4 border-[var(--brand)]" data-aos="slide-up" data-aos-delay="180">
               <h3 class="text-lg font-semibold text-[var(--brand)]">기술성과</h3>
-              <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
+              <ul class="mt-2 text-base text-gray-700 list-disc list-inside">
                 <li>ePTFE 개발 성공 — 반도체·바이오 핵심 필터 국산화</li>
               </ul>
             </div>
@@ -391,7 +391,7 @@
 
             <div class="flex-1 bg-white p-4 rounded-lg card-border shadow-sm border-l-4 border-sky-400" data-aos="slide-up" data-aos-delay="220">
               <h3 class="text-lg font-semibold text-sky-600">기술 증명</h3>
-              <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
+              <ul class="mt-2 text-base text-gray-700 list-disc list-inside">
                 <li>SEMICON Korea 2025 등 전시회를 통한 기술 검증</li>
               </ul>
             </div>
@@ -431,7 +431,7 @@
         </div>
         <div class="mt-4 flex gap-2">
           <span class="pill text-xs">유럽 진출</span>
-          <span class="pill text-xs">수입 대체</span>
+          <span class="pill text-xs">국내 최초</span>
         </div>
       </div>
     </article>
